--- a/Bigindex.html
+++ b/Bigindex.html
@@ -1,1 +1,19 @@
-<html><body><h2>there will be have something</h2><p>ummm</p><p>az</p><p>qq:663044904</p> <p> </p><p> </p><p> </p><p> </p><p> </p><p> </p> <p></p><a href="http://www.w3school.com.cn">study here</a><p>hmmm</p><a href="https://github.com/steaven-china">my github</a><img src="me.tiff" width="200" height="142" /></body></html>
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<html>
+
+<body>
+    <h2>这里会有什么的</h2>
+    <p>（在开发，相信我）</p>
+    <p>咕咕</p>
+    <p></p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+    <p>啊这</p>
+    <p>。</p>
+    <p>hmmm</p><a href="https://github.com/steaven-china">my github</a><img src="me.tiff" width="200" height="142" />
+</body>
+
+</html>
