--- a/errorindex.html
+++ b/errorindex.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
 <body>
 <h1>
@@ -5,5 +7,5 @@
 </h1>
 <p>error 404</p>
 <p>所以这是个错误：P</p>
-</body>
+<p>hmmm</p><a href="https://github.com/steaven-china">my github</a>
 </html>
