--- a/index-eng.html
+++ b/index-eng.html
@@ -13,7 +13,7 @@
     <p> </p>
     <p> </p>
     <p>hmmm</p><a href="https://github.com/steaven-china">my github</a>
-    <img src="me.tiff" width="200" height="142" />
+    <img src="language.png" width="200" height="142" />
     <a href="./index.html">中文</a>
 </body>
 
