--- a/errorindex.html
+++ b/errorindex.html
@@ -7,5 +7,7 @@
 </h1>
 <p>error 404</p>
 <p>所以这是个错误：P</p>
-<p>hmmm</p><a href="https://github.com/steaven-china">my github</a>
+<p>hmmm</p>
 </html>
+<!--index.html里那段是整活哈，还有-->
+<!--https://www.octopusjsq.top里，按f12有惊喜（大雾）-->
