--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p> </p>
     <p></p>
     <p>https://github.com/steaven-china</p>
-    <p>hmmm</p><a href="./index-eng.html">english</a>
+    <p>hmmm</p>
     <img src="language.png" width="10" height="10" />
 </body>
 
