--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<html>
+<html lang="zh-cn">
 
 <body>
     <h2>这里会有什么的</h2>
@@ -8,7 +8,7 @@
     <p>az</p>
     <p>https://github.com/steaven-china</p>
     <p>hmmm</p>
-    <img src="language.png" width="10" height="10" />
+    <img alt="languages page" src="language.png" width="10" height="10" />
         <a href = './working.html' target="_blank">
         <button>
             在做了在做了
