--- a/index-eng.html
+++ b/index-eng.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<html>
+<html lang="en">
 
 <body>
     <h2>there will be have something</h2>
     <p>ummm</p>
     <p>az</p>
     <p>hmmm</p><a href="https://github.com/steaven-china">my github</a>
-    <img src="language.png" width="10" height="10" />
+    <img alt="languages page" src="language.png" width="10" height="10" />
     
 </body>
 
