--- a/working.html
+++ b/working.html
@@ -5,6 +5,6 @@
         <h1>
             在做了在做了
         </h1>
-        <img src="working.jpg" width="507.5" height="349.5" />
+        <img alt="照片（其他地方扣的）" src="working.jpg" width="507.5" height="349.5" />
     </body>
 </html>
